portal-v2-dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-v2-dev

spec:
  entryPoints:
    - websecure
  tls:
    secretName: portal-v2-dev-tls
  routes:
    - kind: Rule
      middlewares:
        - name: auth-trapti-tech-hard
          namespace: auth
      match: Host(`portal-v2-dev.trapti.tech`) && !Path(`/.well-known/acme-challenge/{path:.*}`) && (PathPrefix(`/api/`) || PathPrefix(`/.well-known/`) || Path(`/activate`))
      priority: -99
      services:
        - namespace: portal-v2-dev
          kind: Service
          name: portal-v2-dev-backend
          port: 8101
          scheme: http
          weight: 1
    # frontend はまだ
    # - kind: Rule
    #   middlewares:
    #     - name: auth-trapti-tech-hard
    #       namespace: auth
    #   match: Host(`portal-v2-dev.trapti.tech`) && !Path(`/.well-known/acme-challenge/{path:.*}`)
    #   priority: -100
    #   services:
    #     - namespace: portal-v2-dev
    #       kind: Service
    #       name: portal-v2-dev-frontend
    #       port: 8100
    #       scheme: http
    #       weight: 1
